[package]
name = "kzg_mst"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
halo2-ecc = { git = "https://github.com/punwai/halo2-lib", branch = "kzg"}
halo2-base = { git = "https://github.com/punwai/halo2-lib", branch = "kzg", default-features = false, features = ["test-utils"] }
summa-solvency =  { git = "https://github.com/summa-dev/summa-solvency.git", package = "summa-solvency", rev = "56f28ee0" }
ark-std = { version = "0.3.0", features = ["print-trace"] }
rand_core = { version = "0.6", default-features = false, features = ["getrandom"] }
rand = "0.8"
rand_chacha = "0.3.1"
ff = "0.12"
serde = "1.0.183"
num_cpus = "1.16.0"

[features]
large-entry = []
